# FacePythonAPI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  README_EN.md  faceapi.cpp  faceapi.h  faceapi.py  seeta_test.py  utils.cpp
cmake/: copyfile.cmake  seetaface.cmake
lib/mac/: libSeetaAuthorize.dylib  libSeetaEyeStateDetector200.dylib  libSeetaFaceAPI.dylib  libSeetaFaceDetector600.dylib  libSeetaFaceLandmarker600.dylib  libSeetaFaceRecognizer610.dylib  libSeetaGenderPredictor600.dylib  libSeetaMaskDetector200.dylib  libSeetaPoseEstimation600.dylib  libSeetaQualityAssessor300.dylib
model/: README.md
python/: README.md  config.yml  config.yml.in  d.py  demo.py  face.py  faceapi.py  index.py  main.py  main_bake.spec  readme.md  requirements.txt  run.py  setup.py  ttt.py  utils.py
python/.setuptools-cmake-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FaceAPI.sln  FaceAPI.vcxproj  FaceAPI.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  py_faceapi.vcxproj  py_faceapi.vcxproj.filters
python/.setuptools-cmake-build/lib/win/Release/: py_faceapi.cp38-win_amd64.pyd  py_faceapi.exp  py_faceapi.lib
python/.setuptools-cmake-build/py_faceapi.dir/Release/: py_faceapi.cp38-win_amd64.pyd.recipe
python/.setuptools-cmake-build/py_faceapi.dir/Release/py_faceapi.tlog/: CL.10168.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  py_faceapi.lastbuildstate  py_faceapi.write.1u.tlog
python/.setuptools-cmake-build/third/pybind11/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  pybind11.sln
python/.setuptools-cmake-build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
python/.setuptools-cmake-build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
python/api/: faceapi.py
python/base/: config.py  db.py  log.py  middleware.py  scheduler.py  utils.py
python/faceapi/: __init__.py  c_lib_wrap.py  c_lib_wrap.py.in
python/faceapi/libs/: libFaceAPI.dylib  libSeetaAgePredictor600.dylib  libSeetaFaceAntiSpoofingX600.dylib  libSeetaFaceTracking600.dylib
python/faceapi_gpu_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/faceapi_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/facelib/: facelib.pkl
python/facelib/index/: vector.index
python/models/: DB.sqlite  models.py  pydantic_models.py
python/scripts/: process_libraries.py
python/test/: apitest.py  seeta_test.py
serving/: Dockerfile  README.md  config.yml.in  face.py  index.py  main.py  requirements.txt  run.py  run.sh
serving/api/: face_struct.py  faceapi.py
serving/base/: config.py  db.py  log.py  middleware.py  utils.py
serving/facelib/: facelib.pkl
serving/facelib/index/: vector.index
serving/models/: DB.sqlite  models.py  pydantic_models.py
serving/offline_package/: fastapi-0.87.0-py3-none-any.whl  pydantic-1.10.2-cp39-cp39-win_amd64.whl
serving/offline_package/slowapi/: limits-1.6-py3-none-any.whl  slowapi-0.1.6-py3-none-any.whl
serving/offline_package/starlette/: starlette-0.21.0-py3-none-any.whl
serving/offline_package/tortoise-orm/: iso8601-1.1.0-py3-none-any.whl  pypika_tortoise-0.1.6-py3-none-any.whl  tortoise_orm-0.19.2-py3-none-any.whl
serving/offline_package/uvicorn/: uvicorn-0.19.0-py3-none-any.whl
serving/script/: copy_libs.py
src/: faceapi.cpp  faceapi.h
src/capi/: faceapi.cpp  faceapi.h
src/pybind/: FaceAPI.cpp  FaceAPI.h  main.cpp  main.cpp.in  main.h  pybind_faceapi.cpp  pybind_struct.cpp
src/utils/: utils.cpp  utils.h
